--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://qthibodeaux.github.io/PhotoSite/",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
